fixed layout bug

--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -7,7 +7,7 @@
   padding: 100px 20px;
 }
 
-@media (min-width: 992px)  {
+@media (min-width: 922px)  {
   .container {
     flex-direction: row;
     justify-content: space-between;
